-Refatoração do Projeto

--- a/Modelo.Domain/Modelo.Domain.csproj
+++ b/Modelo.Domain/Modelo.Domain.csproj
@@ -5,9 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Dominio.Modelo\**" />
-    <EmbeddedResource Remove="Dominio.Modelo\**" />
-    <None Remove="Dominio.Modelo\**" />
+    <Folder Include="Interfaces\" />
   </ItemGroup>
 
 </Project>
