--- a/Modelo.Service/Modelo.Service.csproj
+++ b/Modelo.Service/Modelo.Service.csproj
@@ -4,4 +4,13 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Servicos\" />
+    <Folder Include="Validadores\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Modelo.Domain\Modelo.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
