--- a/Modelo.Domain/Modelo.Domain.csproj
+++ b/Modelo.Domain/Modelo.Domain.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="FluentValidation.AspNetCore" Version="8.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Entidades\Acesso\" />
+  </ItemGroup>
+
 </Project>
