--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -28,7 +28,15 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="ClientApp\src\app\pais\pais.component.ts" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Modelo.Infra.Data\Modelo.Infra.Data.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <TypeScriptCompile Include="ClientApp\src\app\pais\pais.component.ts" />
   </ItemGroup>
 
   <ItemGroup>
