--- a/WebApi/ClientApp/package.json
+++ b/WebApi/ClientApp/package.json
@@ -12,6 +12,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-devkit/build-angular": "^0.801.3",
     "@angular/animations": "8.1.3",
     "@angular/common": "8.1.3",
     "@angular/compiler": "8.1.3",
@@ -23,16 +24,15 @@
     "@angular/platform-server": "8.1.3",
     "@angular/router": "8.1.3",
     "@nguniversal/module-map-ngfactory-loader": "6.0.0",
-    "core-js": "^2.5.4",
-    "rxjs": "^6.5.2",
-    "zone.js": "^0.9.1",
     "aspnet-prerendering": "^3.0.1",
     "bootstrap": "^4.1.3",
+    "core-js": "^2.5.4",
     "jquery": "3.3.1",
-    "popper.js": "^1.14.3"
+    "popper.js": "^1.14.3",
+    "rxjs": "^6.5.2",
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.0",
     "@angular/cli": "^8.1.3",
     "@angular/compiler-cli": "8.1.3",
     "@angular/language-service": "^8.1.3",
