--- a/Modelo.Infra.Data/Modelo.Infra.Data.csproj
+++ b/Modelo.Infra.Data/Modelo.Infra.Data.csproj
@@ -1,7 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
+    <AssemblyVersion>1.2019.10.20</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
