--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -10,7 +10,7 @@
 
     <!-- Set this to true if you enable server-side prerendering -->
     <BuildServerSideRenderer>false</BuildServerSideRenderer>
-    <AssemblyVersion>1.2019.10.20</AssemblyVersion>
+    <AssemblyVersion>1.2019.10.26</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -29,6 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="ClientApp\src\app\modelo\usuario\usuario.ts" />
     <None Remove="ClientApp\src\app\pais\pais.component.ts" />
     <None Remove="ClientApp\src\app\usuario\login\login.component.ts" />
   </ItemGroup>
@@ -38,6 +39,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <TypeScriptCompile Include="ClientApp\src\app\modelo\usuario\usuario.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\pais\pais.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\usuario\login\login.component.ts" />
   </ItemGroup>
