--- a/Modelo.Domain/Modelo.Domain.csproj
+++ b/Modelo.Domain/Modelo.Domain.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
-    <AssemblyVersion>1.2019.10.27</AssemblyVersion>
+    <AssemblyVersion>1.2019.12.25</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,7 +10,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Entidades\Acesso\" />
+    <Folder Include="Interfaces\Acesso\" />
+    <Folder Include="Interfaces\Cadastros\" />
   </ItemGroup>
 
 </Project>
