--- a/Modelo.Infra.CrossCutting/Modelo.Infra.CrossCutting.csproj
+++ b/Modelo.Infra.CrossCutting/Modelo.Infra.CrossCutting.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
+    <AssemblyVersion>1.2019.12.25</AssemblyVersion>
   </PropertyGroup>
 
 </Project>
