--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -10,7 +10,7 @@
 
     <!-- Set this to true if you enable server-side prerendering -->
     <BuildServerSideRenderer>false</BuildServerSideRenderer>
-    <AssemblyVersion>1.2019.10.27</AssemblyVersion>
+    <AssemblyVersion>1.2019.12.25</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -32,6 +32,7 @@
     <None Remove="ClientApp\src\app\autorizacao\guarda.rotas.ts" />
     <None Remove="ClientApp\src\app\modelo\usuario\usuario.ts" />
     <None Remove="ClientApp\src\app\pais\pais.component.ts" />
+    <None Remove="ClientApp\src\app\servicos\usuario\usuario.servico.ts" />
     <None Remove="ClientApp\src\app\usuario\login\login.component.ts" />
   </ItemGroup>
 
@@ -43,6 +44,7 @@
     <TypeScriptCompile Include="ClientApp\src\app\autorizacao\guarda.rotas.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\modelo\usuario\usuario.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\pais\pais.component.ts" />
+    <TypeScriptCompile Include="ClientApp\src\app\servicos\usuario\usuario.servico.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\usuario\login\login.component.ts" />
   </ItemGroup>
 
@@ -53,6 +55,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="ClientApp\src\app\servicos\pais\" />
     <Folder Include="ClientApp\src\app\usuario\cadastro\" />
   </ItemGroup>
 
