--- a/WebApi/configuracao.json
+++ b/WebApi/configuracao.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "ConexaoBanco": "Data Source=LUIZFERNANDO\\SQLEXPRESS;Initial Catalog=WebApi;Persist Security Info=True;User ID=sa;Password=mygod&1000"
+    "ConexaoBanco": "Data Source=LUIZFERNANDO;Initial Catalog=WebApi;Persist Security Info=True;User ID=sa;Password=230992"
   }
 }
