--- a/Modelo.Domain/Modelo.Domain.csproj
+++ b/Modelo.Domain/Modelo.Domain.csproj
@@ -2,11 +2,16 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
-    <AssemblyVersion>1.2020.1.27</AssemblyVersion>
+    <AssemblyVersion>1.2020.1.30</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="FluentValidation.AspNetCore" Version="8.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Entidades\Cadastros\Acesso\" />
+    <Folder Include="Interfaces\Acesso\" />
   </ItemGroup>
 
 </Project>
