--- a/Modelo.Domain/Modelo.Domain.csproj
+++ b/Modelo.Domain/Modelo.Domain.csproj
@@ -2,11 +2,15 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
-    <AssemblyVersion>1.2020.4.13</AssemblyVersion>
+    <AssemblyVersion>1.2020.5.13</AssemblyVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="FluentValidation.AspNetCore" Version="8.4.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Modelo.Infra.CrossCutting\Modelo.Infra.CrossCutting.csproj" />
   </ItemGroup>
 
 </Project>
