--- a/WebApi/ClientApp/package.json
+++ b/WebApi/ClientApp/package.json
@@ -25,25 +25,25 @@
     "@angular/router": "8.1.3",
     "@nguniversal/module-map-ngfactory-loader": "6.0.0",
     "aspnet-prerendering": "^3.0.1",
-    "bootstrap": "^4.1.3",
-    "core-js": "^2.5.4",
+    "bootstrap": "^4.5.0",
+    "core-js": "^2.6.11",
+    "https-proxy-agent": " > = 2.2.3 ",
     "jquery": "3.3.1",
-    "popper.js": "^1.14.3",
-    "rxjs": "^6.5.2",
-    "zone.js": "^0.9.1",
-    "https-proxy-agent": " > = 2.2.3 "
+    "popper.js": "^1.16.1",
+    "rxjs": "^6.5.5",
+    "zone.js": "^0.9.1"
   },
   "devDependencies": {
-    "@angular/cli": "^8.1.3",
+    "@angular/cli": "^8.3.28",
     "@angular/compiler-cli": "8.1.3",
-    "@angular/language-service": "^8.1.3",
-    "@types/jasmine": "~2.8.6",
-    "@types/jasminewd2": "~2.0.3",
+    "@angular/language-service": "^8.2.14",
+    "@types/jasmine": "^2.8.17",
+    "@types/jasminewd2": "^2.0.8",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.2.1",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^3.0.0",
+    "karma": "^3.1.4",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~1.4.2",
     "karma-jasmine": "~1.1.1",
